# nina

./: .env  .firebaserc  .gitignore  AGENTS.md  CHANGELOG.md  CONFIG_LLM.md  Makefile  README.md  docker-compose-infra.yml  firebase.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  rollup.config.js  skills-lock.json  tsconfig.json
.agent/: agent.md  architecture-app.md  architecture-landing-page.md  code-review-improvements.md  design-system.md  features.md  repository.md  role.md  stack.md  verify.md
.claude/: .claude.md  settings.local.json
.github/: copilot-instructions.md
.github/agents/: Tester.agent.md
.github/instructions/: Spec.Ts.instructions.md  Typescript.instructions.md
.github/prompts/: explore.prompt.md
.github/workflows/: release.yml
.specify/memory/: constitution.md
apps/cli/: README.md  pyproject.toml
apps/cli/nina_cli/: api.py  chat_commands.py  codex_commands.py  config_commands.py  daemon_commands.py  integrations_commands.py  job_commands.py  kanban_commands.py  llm_commands.py  main.py  meeting_commands.py  notes_commands.py  opencode_commands.py  output.py  project_commands.py  providers_commands.py  repo_commands.py  research_commands.py  search_commands.py  setup_commands.py  task_commands.py  ticket_commands.py  voice_commands.py  workflow_commands.py
apps/desktop/: .gitignore  Cargo.toml  README.md  bacon.toml
apps/desktop/src/: actions.rs  api.rs  app.rs  assets.rs  dictation.rs  main.rs  models.rs  ui.rs
apps/server/: README.md  pyproject.toml
apps/server/nina_server/: __init__.py  app.py  auth.py  db.py  dependencies.py  logging_config.py  main.py  runtime.py
apps/server/nina_server/routers/: __init__.py  codex.py  config.py  health.py  integrations.py  jobs.py  llm.py  meetings.py  notes.py  repositories.py  search.py  sessions.py  tasks.py  voice.py  workflows.py
apps/server/nina_server/schemas/: __init__.py  config.py  integrations.py  jobs.py  meetings.py  notes.py  repositories.py  search.py  sessions.py  tasks.py  voice.py  workflows.py
apps/tui/: package.json  tsconfig.json
bruno-http/: Test.bru  bruno.json
docs/: 01-product-scope.md  02-architecture.md  03-storage-and-obsidian.md  04-database-schema.md  05-api-spec.md  06-cli-spec.md  07-tui-spec.md  08-workflows-llm-scheduler.md  09-implementation-backlog.md  10-open-questions.md  11-agentic-development.md  12-dev-ops-todo.md  12-llm-tools.md  README.md
nina-codex-plugin/: README.md  install.sh
nina-codex-plugin/files/: marketplace.json
scripts/: desktop_install_icon.sh  desktop_native_libs.sh  install.ps1  install.sh  nina_build.py  nina_dev.py  nina_doctor.py  release_assets.sh  sync_version.py
src/: HelloWorldPanel.ts  NinaPanel.ts  extension.ts  getNonce.ts
src/lib/: command-handlers.ts  commands.ts
src/panels/: NinaPanel.ts  NinaPanelHtml.ts  panel-commands.ts  panel-message-handlers.ts
tests/: README.md  auth.setup.ts  conftest.py  example.spec.ts
tests/integration/: test_cli_daemon_smoke.py  test_codex_api.py  test_codex_events_api.py  test_daemon_api.py  test_integrations_api.py  test_meetings_api.py  test_opencode_api.py  test_repositories_api.py  test_voice_api.py
tests/unit/: test_aligned_mixer.py  test_cli_commands.py  test_cli_runner.py  test_codex_client.py  test_codex_password.py  test_codex_supervisor.py  test_config_init.py  test_core.py  test_daemon_factory.py  test_db_migrations.py  test_default_tools.py  test_embeddings.py  test_integrations_credentials.py  test_integrations_service.py  test_llm_provider.py  test_macos_process_tap.py  test_meetings_manager.py  test_meetings_recorder.py  test_meetings_service.py  test_meetings_transcription.py  test_meetings_workflows.py  test_nina_build.py  test_nina_codex_plugin_hook.py  test_notes_service.py  test_obsidian_task_notes.py  test_opencode_client.py  test_opencode_password.py  test_opencode_supervisor.py  test_pricing_claude_parser.py  test_pricing_models.py  test_pricing_openai_parser.py  (+17 more)
webviews/: global.d.ts
(+53 files in other folders)
