[project]
name = "nina"
version = "0.1.4"
description = "Local-first personal operations platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Nina Team" }]
dependencies = [
    "nina-core",
    "nina-server",
    "nina-cli",
]

[tool.uv.workspace]
members = ["packages/*", "apps/*"]
exclude = ["apps/tui"]

[tool.uv.sources]
nina-core = { workspace = true }
nina-server = { workspace = true }
nina-cli = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pyright>=1.1.380",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "sqlalchemy2-stubs>=0.0.2a38",
    "fastembed>=0.2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["packages", "apps"]
exclude = [
  "packages/nina_core/nina_core/models",
  "packages/nina_core/nina_core/db",
  "packages/nina_core/nina_core/projects",
  "packages/nina_core/nina_core/obsidian",
  "packages/nina_core/nina_core/search",
  "packages/nina_core/nina_core/notes",
  "packages/nina_core/nina_core/llm",
  "packages/nina_core/nina_core/workflows",
  "packages/nina_core/nina_core/scheduler",
  "packages/nina_core/nina_core/tasks",
  "packages/nina_core/nina_core/opencode",
  "apps/server",
]
pythonVersion = "3.12"
strict = ["packages/nina_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: fast tests with no daemon process",
    "integration: daemon/API/CLI integration tests using isolated data",
]
