[project]
name = "nina-cli"
version = "0.1.3"
description = "Nina CLI (Typer)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Nina Team" }]

dependencies = [
    "nina-core",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
nina = "nina_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nina_cli"]

[tool.ruff]
target-version = "py312"
line-length = 100
