[package]
name = "nina-desktop"
version = "0.1.4"
edition = "2021"
description = "Nina GPUI desktop client"
license = "MIT"

[dependencies]
anyhow = "1.0"
ashpd = { version = "0.13", default-features = false, features = ["async-io", "global_shortcuts"] }
async-io = "2.6"
futures-util = "0.3"
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "4d75feda0403e8bea1b6a257b18e96d8e2a279a1" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "4d75feda0403e8bea1b6a257b18e96d8e2a279a1" }
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
ureq = { version = "2.12", features = ["json"] }
urlencoding = "2.1"

[dev-dependencies]
pretty_assertions = "1.4"
