[project]
name = "nina-server"
version = "0.1.4"
description = "Nina daemon (FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Nina Team" }]

dependencies = [
    "nina-core",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
nina-server = "nina_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nina_server"]

[tool.ruff]
target-version = "py312"
line-length = 100
